Fix to height issue on mobile

--- a/sass/hero.sass
+++ b/sass/hero.sass
@@ -1,7 +1,8 @@
 @import _sizes
 
 header
-  height: 100%
+  height: 100vh
+  transition: height 999999s
   position: relative
   font-family: 'Righteous', cursive
 
